fix: styling that got broken in v13 update
addresses COR-531

--- a/less/global/window.less
+++ b/less/global/window.less
@@ -3,10 +3,28 @@
 }
 
 .rollable {
+
   &:hover,
   &:focus {
     color: #000;
     text-shadow: 0 0 10px red;
     cursor: pointer;
+  }
+}
+
+/*
+amending some classes to help official modules work in v13
+*/
+.sizedCenteredImageContainer {
+  img {
+    display: inline-block;
+  }
+}
+
+.entryContent {
+  .coriolis-sidebar {
+    h2 {
+      color: white;
+    }
   }
 }
